tests/fixtures/invalid/pow_bytes_none.py
# Cannot call pow() with Bytes, None
x = pow(b"hello", None)
